Fix twemoji sidebar shifting on render

--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -92,7 +92,7 @@ html {
   line-height: 1.75;
 }
 .sidebar-nav-item img.emoji {
-  margin: 0 .2em 0 0;
+  margin: 0;
 }
 .sidebar-nav-item.active {
   font-weight: bold;
